--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -616,11 +616,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb19eb08",
    "metadata": {},
    "source": [
-    "### Full battery model"
+    "### Full Battery Model"
    ]
   },
   {
@@ -634,11 +635,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03fcf731",
    "metadata": {},
    "source": [
-    "### Uncertainty quantification"
+    "### Uncertainty Quantification"
    ]
   },
   {
@@ -653,6 +655,25 @@
     "    python3 Uncertainty_Propagation.py\n",
     "    \n",
     "**Note** This will require loading of additional modules. Alternatively, the UQ results can be found in the developer documentation."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9990df6e",
+   "metadata": {},
+   "source": [
+    "### Appending a Run\n",
+    "\n",
+    "The 'checkpointing' branch of the github repository contains additional features to continue a run from an output file using a new user input parameter file with additional applied current 'iapp' steps. The 'user_input.py' file contains comments to explain the use of this feature.\n",
+    "\n",
+    "This branch can be access with the command:\n",
+    "\n",
+    "`git checkout checkpointing`\n",
+    "\n",
+    "The main code can be reaccessed with the command:\n",
+    "\n",
+    "`git checkout main`\n"
    ]
   },
   {
