last doc updates

--- a/Documentation/latex/convergence__test_8py.tex
+++ b/Documentation/latex/convergence__test_8py.tex
@@ -4,21 +4,11 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespaceconvergence__test}{convergence\+\_\+test}}
-\begin{DoxyCompactList}\small\item\em Test convergence for dt and number of nodes. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\doxysubsection*{Variables}
+\begin{DoxyCompactList}\small\item\em Test convergence of final voltage and lithium mass loss of unit test with dt and number of nodes. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-list \mbox{\hyperlink{namespaceconvergence__test_a01bf350668845d335856a01897f52f08}{dt\+\_\+vals}} = \mbox{[}0.\+01,0.\+05,0.\+1,0.\+5,1.\+0,5.\+0,10.\+0\mbox{]}
+def \mbox{\hyperlink{namespaceconvergence__test_ae835f30dfb3114da8a7e72ad67039cc3}{run\+\_\+dt\+\_\+convergence}} ()
 \item 
-\mbox{\hyperlink{namespaceconvergence__test_af280c2b30ee28923780172f672744462}{final\+\_\+voltage}} = np.\+array(\mbox{[}$\,$\mbox{]})
-\item 
-\mbox{\hyperlink{namespaceconvergence__test_a286581480f1ac2b891af448946570ab7}{final\+\_\+mass\+\_\+loss}} = np.\+array(\mbox{[}$\,$\mbox{]})
-\item 
-\mbox{\hyperlink{namespaceconvergence__test_ac4055e3a20b6b3af3d10590ea446ef6c}{v}}
-\item 
-\mbox{\hyperlink{namespaceconvergence__test_a620ad3220b3d892047f36cbaf73119af}{mass\+\_\+loss}}
-\item 
-\mbox{\hyperlink{namespaceconvergence__test_a770f288d3048ff6cbee9faa0969fd6b0}{dt}}
-\item 
-\mbox{\hyperlink{namespaceconvergence__test_a27f4b26b09407d804f25d584d05660c2}{nodenum}}
+def \mbox{\hyperlink{namespaceconvergence__test_a66c69462f9946100e97acbf037eaa7aa}{run\+\_\+node\+\_\+convergence}} ()
 \end{DoxyCompactItemize}
