--- a/Documentation/latex/index.tex
+++ b/Documentation/latex/index.tex
@@ -7,5 +7,7 @@ SPAMS models the charging and discharging of a lithium ion battery using a Crank
 \item Options for parallelism
 \item Extend the model to a full battery
 \item Uncertainty quantification
-\end{DoxyItemize}\hypertarget{index_Contributors}{}\doxysection{Fraser Birks, Laura Cairns, Sebastian Dooley, Arielle Fitkin, Jake Eller, and Yu Lei}\label{index_Contributors}
+\end{DoxyItemize}\hypertarget{index_Contributors}{}\doxysection{Contributors}\label{index_Contributors}
+Fraser Birks, Laura Cairns, Sebastian Dooley, Arielle Fitkin, Jake Eller, and Yu Lei
+
 Het\+Sys CDT, University of Warwick 
