--- a/Documentation/latex/user__input__full__battery___g_i_t_t_8py.tex
+++ b/Documentation/latex/user__input__full__battery___g_i_t_t_8py.tex
@@ -4,7 +4,7 @@
 \begin{DoxyCompactItemize}
 \item 
  \mbox{\hyperlink{namespaceuser__input__full__battery___g_i_t_t}{user\+\_\+input\+\_\+full\+\_\+battery\+\_\+\+GITT}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Example script for a full battery model. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Variables}
 \begin{DoxyCompactItemize}
 \item 
