--- a/Documentation/latex/namespaces.tex
+++ b/Documentation/latex/namespaces.tex
@@ -1,7 +1,7 @@
 \doxysection{Modules List}
 Here is a list of all modules with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{namespacecheckpointing}{checkpointing}} \\*Module to read and write checkpoint files }{\pageref{namespacecheckpointing}}{}
-\item\contentsline{section}{\mbox{\hyperlink{namespaceconvergence__test}{convergence\+\_\+test}} \\*Test convergence for dt and number of nodes }{\pageref{namespaceconvergence__test}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespaceconvergence__test}{convergence\+\_\+test}} \\*Test convergence of final voltage and lithium mass loss of unit test with dt and number of nodes }{\pageref{namespaceconvergence__test}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespacemixed__parallel__strat__test}{mixed\+\_\+parallel\+\_\+strat\+\_\+test}} \\*Test the runtime of the unit test for different provided processes in the mixed parallel strategy }{\pageref{namespacemixed__parallel__strat__test}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespace_m_k_l__threads__test}{MKL\+\_\+threads\+\_\+test}} \\*Test the runtime of the unit test for different numbers of threads }{\pageref{namespace_m_k_l__threads__test}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespacenc__output}{nc\+\_\+output}} \\*Writes results to a net\+CDF file }{\pageref{namespacenc__output}}{}
@@ -11,7 +11,7 @@ Here is a list of all modules with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{namespace_uncertainty___propagation}{Uncertainty\+\_\+\+Propagation}} \\*Performs uncertainty propagation }{\pageref{namespace_uncertainty___propagation}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceunit__test}{unit\+\_\+test}} \\*Function that runs a unit test with a provided number of nodes, a provided timestep and a provided number of cores }{\pageref{namespaceunit__test}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceuser__input}{user\+\_\+input}} \\*Sets up the user inputs and executes the solver }{\pageref{namespaceuser__input}}{}
-\item\contentsline{section}{\mbox{\hyperlink{namespaceuser__input__full__battery___g_i_t_t}{user\+\_\+input\+\_\+full\+\_\+battery\+\_\+\+GITT}} }{\pageref{namespaceuser__input__full__battery___g_i_t_t}}{}
+\item\contentsline{section}{\mbox{\hyperlink{namespaceuser__input__full__battery___g_i_t_t}{user\+\_\+input\+\_\+full\+\_\+battery\+\_\+\+GITT}} \\*Example script for a full battery model }{\pageref{namespaceuser__input__full__battery___g_i_t_t}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceuser__input__mod}{user\+\_\+input\+\_\+mod}} \\*Package containing the functions needed to set up the user input parameters and execute the solver }{\pageref{namespaceuser__input__mod}}{}
 \item\contentsline{section}{\mbox{\hyperlink{namespaceuser__input__parallel__simulation}{user\+\_\+input\+\_\+parallel\+\_\+simulation}} \\*Running script which exists to demonstrate how one uses the GITT function to run simulations in parallel }{\pageref{namespaceuser__input__parallel__simulation}}{}
 \end{DoxyCompactList}
