--- a/Documentation/latex/bibTmpFile_1.bib
+++ b/Documentation/latex/bibTmpFile_1.bib
@@ -6,8 +6,8 @@
     url = {https://doi.org/10.1149/1945-7111/ab9050}
 }
 @ARTICLE{Weppner1977,
-   author = {Weppner, W. and Huggins, R.A}
-    title = "{Determination of the Kinetic Parameters of Mixed‐Conducting Electrodes and Application to the System Li3Sb}",
+   author = {Weppner, W. and Huggins, R.A.},
+    title = "{Determination of the Kinetic Parameters of Mixed Conducting Electrodes and Application to the System Li3Sb}",
      year = 1977,
      journal = {Journal of The Electrochemical Society}
     url = {https://iopscience.iop.org/article/10.1149/1.2133112/meta}
