Updated parallel section of tutorial

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2931370c",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5e757995",
    "metadata": {},
@@ -17,7 +19,7 @@
     "\n",
     "For more advanced features please see the full documentation.\n",
     "\n",
-    "**Please note:** In this notebook code to be run in the command line is preceded by an exclamation mark - this is not needed if running the program outside of this notebook."
+    "**Please note:** In this notebook, code to be run in the command line is preceded by an exclamation mark - this is not needed if running the program outside of this notebook."
    ]
   },
   {
@@ -34,6 +36,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbe9f0b3",
    "metadata": {},
@@ -42,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "152811fb",
    "metadata": {},
@@ -69,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1161615c",
    "metadata": {},
@@ -77,6 +82,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e18964e",
    "metadata": {},
@@ -87,6 +93,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "119919ec",
    "metadata": {},
@@ -95,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc6c99bc",
    "metadata": {},
@@ -121,6 +129,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1ddcb123",
    "metadata": {},
@@ -152,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "025b87c1",
    "metadata": {},
@@ -175,6 +185,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "edd220af",
    "metadata": {},
@@ -207,6 +218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2af1b8e5",
    "metadata": {},
@@ -217,6 +229,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a0a19c5",
    "metadata": {},
@@ -246,6 +259,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a3c72bef",
    "metadata": {},
@@ -254,6 +268,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e38a9c73",
    "metadata": {},
@@ -275,6 +290,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6b17d573",
    "metadata": {},
@@ -283,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ff6035d8",
    "metadata": {},
@@ -318,6 +335,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "00a3d666",
    "metadata": {},
@@ -326,6 +344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "290f8d1f",
    "metadata": {},
@@ -348,6 +367,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a71428c",
    "metadata": {},
@@ -403,6 +423,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "586f9baa",
    "metadata": {},
@@ -423,6 +444,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "78db0288",
    "metadata": {},
@@ -441,6 +463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a13f8257",
    "metadata": {},
@@ -449,6 +472,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b76b5bb2",
    "metadata": {},
@@ -457,6 +481,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6d1764c",
    "metadata": {},
@@ -469,6 +494,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d17d17d6",
    "metadata": {},
@@ -479,6 +505,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "494d3788",
    "metadata": {},
@@ -489,6 +516,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37357f09",
    "metadata": {},
@@ -536,6 +564,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "643538bd",
    "metadata": {},
@@ -544,6 +573,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e5614545",
    "metadata": {},
@@ -552,6 +582,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c83c7a57",
    "metadata": {},
@@ -581,7 +612,7 @@
     "### Parallelism - Basic\n",
     "\n",
     "Basic parallelism can be set up in the solver by passing an optional argument 'nprocs', as shown in the code below. By default, nprocs is set to 1. \n",
-    "The number passed to 'nproc' is a maximum number of threads that the user would like to use, and based on this the call_solver function will optimise the actual number of threads for the user's system."
+    "The number passed to 'nprocs' is the maximum number of processors that the user would like to use when running the code. The solver will decide how many threads to use automatically in order to maximise the runtime on the number of processors provided."
    ]
   },
   {
@@ -601,7 +632,7 @@
    "id": "cf75939b",
    "metadata": {},
    "source": [
-    "### Parallelism - GITT"
+    "### Parallelism - Full Battery Simulation"
    ]
   },
   {
@@ -610,7 +641,38 @@
    "id": "af3378e8",
    "metadata": {},
    "source": [
-    "A complete example script for running the solver in parallel is provided. See 'user_input_parallel_simulation.py'.\n",
+    "When running a simulation of a full battery, both halves can be run in parallel as seperate non-communicating processes. This is done automatically for you by the solver, depending on how many processors you specify in the function call.\n",
+    "\n",
+    "A script to call a simple full cell simulation is provided in unit_test.py.\n",
+    "Specifically, calling a full battery simulation uses the following line:\n",
+    "\n",
+    "`UI.full_battery_simulation(output_filename_positive,output_filename_negative,nprocs=4)`\n",
+    "\n",
+    "Note that if nprocs is 1, the simulation will run in serial, if nprocs is 2, the simulation will split the cell into two seperate parallel processes (one for anode and one for cathode), and then any further increases on nprocs provided will lead to multi-threading in the matrix solve through the environment variable MKL_NUM_THREADS with the intel math kernel library. The program decides the optimum strategy of how to do this for you."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "83964b84",
+   "metadata": {},
+   "source": [
+    "### Parallelism - Half cell GITT simulation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "70414cee",
+   "metadata": {},
+   "source": [
+    "A GITT test (Galvanostatic Intermittent Titration Technique) is a type of test which provides a series of steps of current density to a cell, with long rests of no current density in between to allow for the concentration profile to even out. It is possible to calculate the concentration removed in each step prior to the simulation running and subsequently if the rest time is long enough, it is possible to know the initial concentration value for each seperate current step. This means that each current step can be run as a seperate instance of the solver on seperate processors, and then stiched back together after, allowing perfect parallelism.\n",
+    "\n",
+    "A script to run a Half cell GITT simulation is provided in user_input_parallel_simulation.py. Note that you can provide any number of processors (nprocs), when calling the solver function line: <br>\n",
+    "<br>\n",
+    "`UI.GITT_half_cell(output_filename,nprocs,currents,start_times,run_times,wait_times,n,params)` <br>\n",
+    "<br>\n",
+    "and the code will decide automatically the correct number of threads to use to minimise code runtime, given the number of GITT current steps that are being applied.\n",
     "\n",
     "*It should be noted that before running the solver in parallel, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
    ]
@@ -621,15 +683,18 @@
    "id": "cb19eb08",
    "metadata": {},
    "source": [
-    "### Full Battery Model"
+    "### Parallelism - Full Battery GITT test"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c353965",
    "metadata": {},
    "source": [
-    "A complete example script for modelling a full battery is provided, including use of the GITT function to parallelise it. See 'user_input_full_battery.py'.\n",
+    "A script is also provided to run a GITT test in parallel with a full battery, which includes plotting a gif output animation of the applied current and voltage with time along side the concentrations in the anode and cathode. See user_input_full_battery_GITT.py.\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "*It should be noted that before running the full battery solver, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
    ]
@@ -644,6 +709,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3fd8cd70",
    "metadata": {},
@@ -677,6 +743,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04717634",
    "metadata": {},
@@ -685,6 +752,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbd0a0c9",
    "metadata": {},
