--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -558,6 +558,8 @@
    "id": "a1bb7ff0",
    "metadata": {},
    "source": [
+    "By default, checkpoint files are produced at intervals equivalent to 10% of the total timesteps.\n",
+    "\n",
     "The number of checkpoint files produced in a run can be changed by editing 'finite_diff_solver.f90'. Locate the call to the subroutine 'write checkpoint'. The subroutine will write a checkpoint file every 'freq' timesteps, which by default is 10% of tsteps. This can be changed by adding freq to the end of the call, as demonstrated below for 20 timesteps.\n",
     "\n",
     "`CALL write_checkpoint(tstep, tsteps, dt, n, c, D, R, a_small, L, iapp, electrode_charge, cstorage, filename, 20)`"
@@ -643,12 +645,15 @@
    "source": [
     "When running a simulation of a full battery, both halves can be run in parallel as seperate non-communicating processes. This is done automatically for you by the solver, depending on how many processors you specify in the function call.\n",
     "\n",
-    "A script to call a simple full cell simulation is provided in unit_test.py.\n",
+    "A example script to call a simple full cell simulation is provided in 'unit_test.py'.\n",
     "Specifically, calling a full battery simulation uses the following line:\n",
     "\n",
     "`UI.full_battery_simulation(output_filename_positive,output_filename_negative,nprocs=4)`\n",
     "\n",
-    "Note that if nprocs is 1, the simulation will run in serial, if nprocs is 2, the simulation will split the cell into two seperate parallel processes (one for anode and one for cathode), and then any further increases on nprocs provided will lead to multi-threading in the matrix solve through the environment variable MKL_NUM_THREADS with the intel math kernel library. The program decides the optimum strategy of how to do this for you."
+    "Note that:\n",
+    "- If nprocs = 1, the simulation will run in serial\n",
+    "- If nprocs = 2, the simulation will split the cell into two seperate parallel processes (one for anode and one for cathode)\n",
+    "- Any further increases on nprocs provided will lead to multi-threading in the matrix solve through the environment variable MKL_NUM_THREADS with the intel math kernel library. The program decides the optimum strategy of how to do this for you."
    ]
   },
   {
@@ -666,13 +671,13 @@
    "id": "70414cee",
    "metadata": {},
    "source": [
-    "A GITT test (Galvanostatic Intermittent Titration Technique) is a type of test which provides a series of steps of current density to a cell, with long rests of no current density in between to allow for the concentration profile to even out. It is possible to calculate the concentration removed in each step prior to the simulation running and subsequently if the rest time is long enough, it is possible to know the initial concentration value for each seperate current step. This means that each current step can be run as a seperate instance of the solver on seperate processors, and then stiched back together after, allowing perfect parallelism.\n",
+    "A GITT test (Galvanostatic Intermittent Titration Technique) is a type of test which provides a series of steps of current density to a cell, with long rests of no current density in between to allow for the concentration profile to even out. It is possible to calculate the concentration removed in each step prior to the simulation running and subsequently if the rest time is long enough, it is possible to know the initial concentration value for each seperate current step. This means that each current step can be run as a seperate instance of the solver on seperate processors, and then stitched back together after, allowing for perfect parallelism.\n",
     "\n",
-    "A script to run a Half cell GITT simulation is provided in user_input_parallel_simulation.py. Note that you can provide any number of processors (nprocs), when calling the solver function line: <br>\n",
-    "<br>\n",
-    "`UI.GITT_half_cell(output_filename,nprocs,currents,start_times,run_times,wait_times,n,params)` <br>\n",
-    "<br>\n",
-    "and the code will decide automatically the correct number of threads to use to minimise code runtime, given the number of GITT current steps that are being applied.\n",
+    "A script to run a Half cell GITT simulation is provided in 'user_input_parallel_simulation.py'. Note that you can provide any number of processors (nprocs), when calling the solver function line (below) and the code will decide automatically the correct number of threads to use to minimise code runtime, given the number of GITT current steps that are being applied.\n",
+    "\n",
+    "`UI.GITT_half_cell(output_filename,nprocs,currents,start_times,run_times,wait_times,n,params)`\n",
+    "\n",
+    "\n",
     "\n",
     "*It should be noted that before running the solver in parallel, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
    ]
@@ -692,9 +697,7 @@
    "id": "6c353965",
    "metadata": {},
    "source": [
-    "A script is also provided to run a GITT test in parallel with a full battery, which includes plotting a gif output animation of the applied current and voltage with time along side the concentrations in the anode and cathode. See user_input_full_battery_GITT.py.\n",
-    "<br>\n",
-    "<br>\n",
+    "A script is also provided to run a GITT test in parallel with a full battery. This scripts outputs a gif animation of the applied current and voltage with time along side the concentrations in the anode and cathode. See 'user_input_full_battery_GITT.py'.\n",
     "\n",
     "*It should be noted that before running the full battery solver, the user should make sure they are familiar with using a simple input file for a half-cell model run in serial as the scripts are largely similar.*"
    ]
